force-app/main/default/objects/Corporates__c/Corporates__c.object-meta.xml
<CustomObject>
    <label>Corporate</label>
    <nameField>
        <label>Corporates Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Corporates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>