force-app/main/default/objects/Corporates__c/fields/Number_of_employees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_employees__c</fullName>
    <label>Number of employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>