force-app/main/default/objects/Corporates__c/fields/Representative_Contact_no__c.field-meta.xml
<CustomField>
    <fullName>Representative_Contact_no__c</fullName>
    <label>Representative Contact no.</label>
    <type>Phone</type>
</CustomField>