force-app/main/default/objects/Corporates__c/fields/Webiste__c.field-meta.xml
<CustomField>
    <fullName>Webiste__c</fullName>
    <label>Website</label>
    <type>Url</type>
</CustomField>